# must_test_server

./: .gitignore  .pre-commit-config.yaml  README.md  constants.py  main.py  pyproject.toml
app/: config.py  constants.py  db.py  exception.py  main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  data.py
app/crud/: __init__.py  base.py  data.py
app/models/: __init__.py  data.py  users.py
app/schemes/: data.py
migrations/: env.py
migrations/versions/: 01_add_data_model.py
py_inst_app/: main.py
tests/: config.py  conftest.py  constants.py
tests/test_api/: test_data.py
