[project]
name = "must-test-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "fastapi[standard]==0.115.0",
]
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
]

[tool.ruff]

target-version = "py312"

extend-exclude = ["migrations"]

line-length = 79


[tool.ruff.lint]

select = [
    "UP",   # pyupgrade
    "I",    # isort
    "F",    # flake8-pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "T20",  # flake8-print
    "T10",  # flake8-debugger
    "PT",   # flake8-pytest-style
    "DTZ",  # flake8-datetimez
    "ERA",  # eradicate
    "FURB", # refurb
]

fixable = [
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

